src/objects/Available_SREC_Contract_Offer__c.object
<CustomObject>
    <fields>
        <fullName>Applicable_Scenario__c</fullName>
        <label>Applicable Scenario</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Length_months__c</fullName>
        <formula>SREC_Contract_Offer__r.Contract_Length_months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Length (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Offer_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Offer Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Matching_SREC_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Represents an SREC offer that currently passes the matching criteria for this scenario.   If this is unchecked, then it is kept for historical purposes only.</inlineHelpText>
        <label>Current Matching SREC Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Offer__c</fullName>
        <formula>SREC_Contract_Offer__r.Default_Offer__c</formula>
        <label>Default Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>SREC_Contract_Offer__r.End_Date__c</formula>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordTypeDeveloperName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordTypeDeveloperName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SREC_Contract_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SREC Contract Offer</label>
        <referenceTo>SREC_Contract_Offer__c</referenceTo>
        <relationshipLabel>Available SREC Contract Offers</relationshipLabel>
        <relationshipName>Available_SREC_Contract_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SREC_Market__c</fullName>
        <formula>SREC_Contract_Offer__r.SREC_Market__r.Name</formula>
        <label>SREC Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>SREC_Contract_Offer__r.Start_Date__c</formula>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>System_Design_Quote__c</fullName>
        <label>System Design Quote</label>
        <referenceTo>System_Design_Quote__c</referenceTo>
        <relationshipLabel>Available SREC Contract Offers</relationshipLabel>
        <relationshipName>Available_SREC_Contract_Offers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Upfront_Amount__c</fullName>
        <formula>SREC_Contract_Offer__r.Upfront_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upfront Amount ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Upfront_Effective_Dollar_Amount__c</fullName>
        <label>Upfront Effective Dollar Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yearly_Amount_SREC__c</fullName>
        <formula>SREC_Contract_Offer__r.Yearly_Amount_Dollar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yearly Amount ($/SREC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yearly_Amount_of_ACP__c</fullName>
        <formula>SREC_Contract_Offer__r.Yearly_Amount_of_ACP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yearly Amount (% of ACP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Available SREC Contract Offer</label>
    <nameField>
        <label>Available SREC Contract Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Available SREC Contract Offers</pluralLabel>
    <recordTypes>
        <fullName>Brokerage</fullName>
        <active>true</active>
        <label>Brokerage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Monthly</fullName>
        <active>true</active>
        <label>Monthly</label>
    </recordTypes>
    <recordTypes>
        <fullName>Upfront</fullName>
        <active>true</active>
        <label>Upfront</label>
    </recordTypes>
    <recordTypes>
        <fullName>Yearly</fullName>
        <active>true</active>
        <label>Yearly</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Record_is_Locked</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Profile.Name = &apos;System Administrator&apos;, false, PRIORVALUE(Locked__c) = true)</errorConditionFormula>
        <errorMessage>Record is part of a closed Contract, and is locked from further editing</errorMessage>
    </validationRules>
</CustomObject>